Updated footer layout, added Mojang disclaimer

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
 <!-- TODO: CSS/LESS file -->
 <style type="text/css">
+*	 	{ box-sizing: border-box; }
 h1 		{ font: bold 20px arial }
 body 	{ font: normal 14px Calibri; line-height: 130%; }
-*	 	{ box-sizing: border-box; }
+footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #777; }
+
 
 .boxGeneric { border: 1px solid #ccc; padding: 10px; margin: 8px 0; background: #eee; }
 
@@ -117,8 +119,9 @@ body 	{ font: normal 14px Calibri; line-height: 130%; }
 	</section>
 
 	<footer>
-		version alpha 0.1 <br/>
-		icons designed by <a href="http://flaticon.com/" target="_blank">Flaticon.com</a>
+		version alpha 0.1 - follow this project on <a href="https://github.com/sidben/MCCommandGenerator" target="_blank">GitHub</a><br/>
+		icons designed by <a href="http://flaticon.com/" target="_blank">Flaticon.com</a><br/>
+		This tool is not supported by Mojang in any way. Minecraft, its images and materials are trademarks and copyrights of Mojang AB.
 	</footer>
 </body>
 
