--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 
 		<div id="boxMobType" class="boxGeneric">
 		</div>
+		<div id="boxMobCustomizer" class="boxGeneric">
+		</div>
 
 
 		<div id="boxSpawnerCustomizer"  class="boxGeneric">
@@ -101,8 +103,6 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 		</div>
 
 
-		<div id="boxMobCustomizer" class="boxGeneric">
-		</div>
 
 
 		<div id="boxResult" class="boxGeneric">
@@ -135,23 +135,24 @@ var mcCommand = new Object();
 
 
 
-function Mob(id, tooltip, picture) {
-	this.EntityId = id;
-	this.Tooltip = tooltip;
-	this.Picture = picture;
+function Mob(id, tooltip, picture, dftHealth) {
+	this.EntityId 		= id;
+	this.Tooltip 		= tooltip;
+	this.Picture 		= picture;
+	this.DefaultHealth 	= dftHealth;
 }
 
 var mobList = [];
-mobList[0] = new Mob('Zombie', 'Zombie', 'zombie.png');
-mobList[1] = new Mob('Skeleton', 'Skeleton', 'skeleton.png');
-mobList[2] = new Mob('Spider', 'Spider', 'spider.png');
-mobList[3] = new Mob('CaveSpider', 'Cave Spider', 'cave_spider.png');
-mobList[4] = new Mob('Creeper', 'Creeper', 'crepper.png');
-mobList[5] = new Mob('Enderman', 'Enderman', 'enderman.png');
-mobList[6] = new Mob('VillagerGolem', 'Iron Golem', '150px-Village_Golem.png');
-mobList[7] = new Mob('Blaze', 'Blaze', 'Blaze_(Icon).png');
-mobList[8] = new Mob('Witch', 'Witch', 'witch.png');
-//mobList[7] = new Mob('Villager', 'Villager');
+mobList[0] = new Mob('Zombie', 'Zombie', 'zombie.png', 20);
+mobList[1] = new Mob('Skeleton', 'Skeleton', 'skeleton.png', 20);
+mobList[2] = new Mob('Spider', 'Spider', 'spider.png', 16);
+mobList[3] = new Mob('CaveSpider', 'Cave Spider', 'cave_spider.png', 12);
+mobList[4] = new Mob('Creeper', 'Creeper', 'crepper.png', 20);
+mobList[5] = new Mob('Enderman', 'Enderman', 'enderman.png', 40);
+mobList[6] = new Mob('VillagerGolem', 'Iron Golem', '150px-Village_Golem.png', 100);
+mobList[7] = new Mob('Blaze', 'Blaze', 'Blaze_(Icon).png', 20);
+mobList[8] = new Mob('Witch', 'Witch', 'witch.png', 26);
+//mobList[7] = new Mob('Villager', 'Villager', 20);
 
 
 
@@ -188,53 +189,119 @@ function start() {
 }
 
 
-function createMobSelector(targetElement) {
+function createMobSelector(container) {
 	var mobBoxHtml = '';
 
 
-	targetElement.innerHTML = "<b>Select the mob type:</b><br/>";
+	container.innerHTML = "<b>Select the mob type:</b><br/>";
 
 	for (var i=0; i<mobList.length; i++) {
 		mobBoxHtml = "<div class='boxMob' id='mob" + i + "'>";
 
-		mobBoxHtml += "<div class='boxPortrait' onclick='setMainMob(" + i + ")'>";
+		mobBoxHtml += "<div class='boxPortrait' onclick='setMainMob(" + i + ")' ondblclick='setMainMob(" + i + ", true)'>";
 		mobBoxHtml += "<img src='assets/images/" + mobList[i].Picture + "' alt='" + mobList[i].Tooltip + "' title='" + mobList[i].Tooltip + "' />";
 		mobBoxHtml += "<div class='mobName'>" + mobList[i].Tooltip + "</div>"
 		mobBoxHtml += "</div>";
 
 		mobBoxHtml += "<div class='boxCommand'>";
 		mobBoxHtml += "<span class='cmdSelect' onclick='setMainMob(" + i + ")'>Select</span>";
-		mobBoxHtml += "<span class='cmdEdit'>Edit</span>";
+		mobBoxHtml += "<span class='cmdEdit' onclick='setMainMob(" + i + ", true)'>Edit</span>";
 		mobBoxHtml += "</div>";
 
 		mobBoxHtml += "</div>";
-		targetElement.innerHTML += mobBoxHtml;
+		container.innerHTML += mobBoxHtml;
 	}
 
-	// OBS 1: Create groups: vanilla (basic) mobs | Presets (?) | My mobs (saved locally)
-	// OBS 2: Add for each mob - SELECT | CUSTOMIZE
+	// OBS 1 (?): Create groups: vanilla (basic) mobs | Presets (?) | My mobs (saved locally)
 }
 
 
 
 
-function createMobCustomizer(mobTyype) {
-	var tgtBox = document.getElementById("boxMobCustomizer");
+function createMobCustomizer(container) {
 	var mobBoxHtml = '';
 
+	//--- validation ---
+	if (mcCommand.MainMob === undefined) { showErrorMessage("No mob selected"); return; }
 
-	tgtBox.innerHTML = "<b>Customize your mob:</b><br/>";
 
-	for (var i=0; i<mobList.length; i++) {
-		mobBoxHtml = "<div class='boxPortrait' id='mob" + i + "'>";
-		mobBoxHtml += "<img src='assets/images/" + mobList[i].Picture + "' alt='" + mobList[i].Tooltip + "' title='" + mobList[i].Tooltip + "' onclick='setMainMob(" + i + ")' />";
-		mobBoxHtml += "</div>";
-		tgtBox.innerHTML += mobBoxHtml;
+	mobBoxHtml = "<b>Customize your mob:</b><br/>";
+
+	//--- mob picture ---
+	mobBoxHtml += "<div class='boxMob'>";
+
+	mobBoxHtml += "<div class='boxPortrait'>";
+	mobBoxHtml += "<img src='assets/images/" + mcCommand.MainMob.Picture + "' alt='" + mcCommand.MainMob.Tooltip + "' title='" + mcCommand.MainMob.Tooltip + "' />";
+	mobBoxHtml += "</div>";
+
+	mobBoxHtml += "</div>";
+
+
+	//--- mob properties and modifiers ---
+	mobBoxHtml += "Preset name: <input type='text' value='Custom " +  mcCommand.MainMob.Tooltip + "' /> <br/>"
+
+	mobBoxHtml += "<br/><br/> <b>GLOBAL PROPERTIES</b><br/>"
+	mobBoxHtml += "Health: <input type='text' value='" + mcCommand.MainMob.DefaultHealth + "' /> <br/>"
+	mobBoxHtml += "Custom name: <input type='text' /> <br/>"
+	mobBoxHtml += "Custom name visible: YES / NO <br/>"
+	mobBoxHtml += "Can pick up loot: YES / NO <br/>"
+	mobBoxHtml += "Persistent (will not despawn): YES / NO <br/>"
+
+	mobBoxHtml += "<br/><br/> <b>UNIQUE PROPERTIES</b><br/>"
+	switch(mcCommand.MainMob.EntityId) {
+		case 'Creeper':
+			mobBoxHtml += "Charged: YES / NO <br/>"
+			mobBoxHtml += "Explosion radius: <input type='text' value='3' /> <br/>"
+			mobBoxHtml += "Fuse: <input type='text' value='30' /> ticks <br/>"
+			break;
+
+		case 'Enderman':
+			mobBoxHtml += "Carried block: <input type='text' /> <br/>"
+			break;
+
+		case 'Guast':
+			mobBoxHtml += "Explosion power: <input type='text' value='1' /> <br/>"
+			break;
+
+		case 'PigZombie':
+			mobBoxHtml += "Angry: YES / NO <br/>"
+			break;
+
+		case 'Skeleton':
+			mobBoxHtml += "Type: Regular / Wither / undefined<br/>"
+			break;
+
+		case 'Villager':
+			mobBoxHtml += "Profession: <input type='text' value='1' /> <br/>"
+			break;
+
+		case 'VillagerGolem':
+			mobBoxHtml += "Player created (don't attack players): YES / NO <br/>"
+			break;
+
+		case 'Wolf':
+			mobBoxHtml += "Angry: YES / NO <br/>"
+			break;
+
+		case 'Zombie':
+			mobBoxHtml += "Villager: YES / NO <br/>"
+			mobBoxHtml += "Baby: YES / NO <br/>"
+			mobBoxHtml += "Can break doors: YES / NO <br/>"
+			break;
+
 	}
 
 
-	tgtBox.innerHTML += "Custom name: <input type='text' />"
+	mobBoxHtml += "<br/><br/> <b>ATTRIBUTES</b><br/>"
 
+	mobBoxHtml += "<br/><br/> <b>EQUIPMENT</b><br/>"
+
+	mobBoxHtml += "<br/><br/> <b>POTION EFFECTS</b><br/>"
+
+
+	mobBoxHtml += "<br/><br/> TODO: save as / reset to default (confirm) / Cancel (confirm)"
+
+	container.innerHTML = mobBoxHtml;
 }
 
 
@@ -293,7 +360,7 @@ function showPropertiesBox(boxType) {
 		case 'spawnerCustom':
 			bMobProps.style.display = 'block';
 			bSpawnerProps.style.display = 'block';
-			createMobSelector(bMobProps);
+			createMobCustomizer(bMobProps);
 			break;
 
 		case 'summon':
@@ -307,17 +374,24 @@ function showPropertiesBox(boxType) {
 
 
 
-function setMainMob(index) {
+
+function setMainMob(index, customize) {
 	// OBS: If in the future 'boxSelected' gets reused, change this to a loop on mobList
+
+	//-- remove the 'selected' class from everyone --
 	var currentSelectedList = document.getElementsByClassName('boxSelected');
 	for (var j=0; j<currentSelectedList.length; j++) {
 		currentSelectedList[j].className = currentSelectedList[j].className.replace('boxSelected', '');
 	}
+
+	//-- add the 'selected' class to the actual selection --
 	document.getElementById("mob" + index).className += ' boxSelected';
 
-
+	//-- Save what mob was selected --
 	mcCommand.MainMob = mobList[index];
 
+	//-- Show the customization/edit box if needed --
+	if (customize === true) showPropertiesBox('spawnerCustom');
 }
 
 
@@ -328,7 +402,7 @@ function generateCommand() {
 	// Type of command
 	switch(mcCommand.Type) {
 		case 'spawner':
-			//--- parameter validation
+			//--- validation
 			if (mcCommand.MainMob === undefined) { showErrorMessage("No mob selected"); break; }
 
 			//--- local variables
