--- a/index.html
+++ b/index.html
@@ -8,16 +8,46 @@
 
 <!-- TODO: CSS/LESS file -->
 <style type="text/css">
+*	 	{ box-sizing: border-box; }
 h1 		{ font: bold 20px arial }
 body 	{ font: normal 14px Calibri; line-height: 130%; }
+footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #777; }
+
 
 .boxGeneric { border: 1px solid #ccc; padding: 10px; margin: 8px 0; background: #eee; }
-.boxPortrait { background: #fff; width: 150px; height: 150px; margin: 5px; overflow: hidden; border: 1px solid #ccc; display: inline-block; cursor: pointer; }
-.boxPortrait img { width: 100%; }
+
+
+
+/*-- Mob Selector --*/
+#boxMobType 		{ display: none; }
+
+#boxMobType .boxMob { margin: 5px; padding: 0 0 10px; width: 160px; display: inline-block; vertical-align: top; }
+
+.boxMob .boxPortrait { background: #fff; width: 150px; height: 150px; margin: 2px auto; overflow: hidden; border: 1px solid #ccc; position: relative; cursor: pointer; }
+.boxMob .boxPortrait img { width: 100%; }
+.boxMob .mobName		{ background: rgba(200,200,200,0.85); color: #333; padding: 5px 10px; text-align: center; position: absolute; bottom: 4%; left: 0; width: 100%; display: none; }
+
+.boxMob .boxCommand { visibility: hidden; }
+.boxMob .boxCommand span {
+	background: #0051a7; background-repeat: no-repeat; background-position: 0px 0px;
+	border: 1px solid #0051a7; color: #fff;
+	width: 75px; padding: 3px 0 3px 32px; display: inline-block; margin: 1px 2px; cursor: pointer;
+}
+.boxMob .boxCommand .cmdSelect { background-image: url('assets/images/ico-select.png') }
+.boxMob .boxCommand .cmdEdit { background-image: url('assets/images/ico-edit.png'); }
+
+.boxMob:hover .mobName 		{ display: block; }
+.boxMob:hover .boxCommand 	{ visibility: visible; }
+
+.boxSelected .boxPortrait	{ border: 3px solid #0051a7;}
+
+
+
 
 #boxCommandType 	{}
-#boxMobType 		{ display: none; }
+#boxMobCustomizer		{ display: none; }
 #boxSpawnerCustomizer	{ display: none; }
+
 
 
 #txtResult	{ width: 80%; height: 50px; background: #333; color: #0f0; padding: 4px; border: 1px solid #000; }
@@ -41,34 +71,38 @@ body 	{ font: normal 14px Calibri; line-height: 130%; }
 		</div>
 
 
-		<div id="boxMobType"  class="boxGeneric">
+		<div id="boxMobType" class="boxGeneric">
+		</div>
+		<div id="boxMobCustomizer" class="boxGeneric">
 		</div>
 
 
 		<div id="boxSpawnerCustomizer"  class="boxGeneric">
 			<b>Spawner parameters:</b><br/>
 
-			<label for="txtSPWSpawnCount">Max amount of mobs per spawn:</label>
-			<input type='text' id='txtSPWSpawnCount' value='' /> <br/>
+			<label for="txtSPWSpawnCount" title="Max amount of mobs per spawn">SpawnCount:</label>
+			<input type='text' id='txtSPWSpawnCount' value='4' /> <br/>
 
-			<label for="txtSPWSpawnRange">Spawn area range:</label>
+			<label for="txtSPWSpawnRange" title="Spawn area range">SpawnRange:</label>
 			<input type='text' id='txtSPWSpawnRange' value='4' /> <br/>
 
-			<label for="txtSPWDelayNext">Next spawn delay:</label>
+			<label for="txtSPWDelayNext" title="Next spawn delay">Delay:</label>
 			<input type='text' id='txtSPWDelayNext' value='' /> ticks <br/>
 
-			<label for="txtSPWDelayMin">Min spawn delay:</label>
-			<input type='text' id='txtSPWDelayMin' value='' /> ticks <br/>
+			<label for="txtSPWDelayMin">MinSpawnDelay:</label>
+			<input type='text' id='txtSPWDelayMin' value='200' /> ticks <br/>
 
-			<label for="txtSPWDelayMax">Max spawn delay:</label>
-			<input type='text' id='txtSPWDelayMax' value='' /> ticks <br/>
+			<label for="txtSPWDelayMax">MaxSpawnDelay:</label>
+			<input type='text' id='txtSPWDelayMax' value='800' /> ticks <br/>
 
-			<label for="txtSPWMaxMobs">Max amount of mobs around the spawner:</label>
-			<input type='text' id='txtSPWMaxMobs' value='' /><br/>
+			<label for="txtSPWMaxMobs" title="Max amount of mobs around the spawner">MaxNearbyEntities:</label>
+			<input type='text' id='txtSPWMaxMobs' value='6' /><br/>
 
-			<label for="txtSPWPlayerRange">Activation range:</label>
-			<input type='text' id='txtSPWPlayerRange' value='' /><br/>
+			<label for="txtSPWPlayerRange" title="Activation range">RequiredPlayerRange:</label>
+			<input type='text' id='txtSPWPlayerRange' value='16' /><br/>
 		</div>
+
+
 
 
 		<div id="boxResult" class="boxGeneric">
@@ -85,7 +119,9 @@ body 	{ font: normal 14px Calibri; line-height: 130%; }
 	</section>
 
 	<footer>
-		version alpha 0.1
+		version alpha 0.1 - follow this project on <a href="https://github.com/sidben/MCCommandGenerator" target="_blank">GitHub</a><br/>
+		icons designed by <a href="http://flaticon.com/" target="_blank">Flaticon.com</a><br/>
+		This tool is not supported by Mojang in any way. Minecraft, its images and materials are trademarks and copyrights of Mojang AB.
 	</footer>
 </body>
 
@@ -99,22 +135,24 @@ var mcCommand = new Object();
 
 
 
-function Mob(id, tooltip, picture) {
-	this.EntityId = id;
-	this.Tooltip = tooltip;
-	this.Picture = picture;
+function Mob(id, tooltip, picture, dftHealth) {
+	this.EntityId 		= id;
+	this.Tooltip 		= tooltip;
+	this.Picture 		= picture;
+	this.DefaultHealth 	= dftHealth;
 }
 
 var mobList = [];
-mobList[0] = new Mob('Zombie', 'Zombie', 'zombie.png');
-mobList[1] = new Mob('Skeleton', 'Skeleton', 'skeleton.png');
-mobList[2] = new Mob('Spider', 'Spider', 'spider.png');
-mobList[3] = new Mob('CaveSpider', 'Cave Spider', 'cave_spider.png');
-mobList[4] = new Mob('Creeper', 'Creeper', 'crepper.png');
-mobList[5] = new Mob('Enderman', 'Enderman', 'enderman.png');
-mobList[6] = new Mob('VillagerGolem', 'Iron Golem', '150px-Village_Golem.png');
-mobList[7] = new Mob('Villager', 'Villager');
-mobList[8] = new Mob('Witch', 'Witch', 'witch.png');
+mobList[0] = new Mob('Zombie', 'Zombie', 'zombie.png', 20);
+mobList[1] = new Mob('Skeleton', 'Skeleton', 'skeleton.png', 20);
+mobList[2] = new Mob('Spider', 'Spider', 'spider.png', 16);
+mobList[3] = new Mob('CaveSpider', 'Cave Spider', 'cave_spider.png', 12);
+mobList[4] = new Mob('Creeper', 'Creeper', 'crepper.png', 20);
+mobList[5] = new Mob('Enderman', 'Enderman', 'enderman.png', 40);
+mobList[6] = new Mob('VillagerGolem', 'Iron Golem', '150px-Village_Golem.png', 100);
+mobList[7] = new Mob('Blaze', 'Blaze', 'Blaze_(Icon).png', 20);
+mobList[8] = new Mob('Witch', 'Witch', 'witch.png', 26);
+//mobList[7] = new Mob('Villager', 'Villager', 20);
 
 
 
@@ -151,27 +189,120 @@ function start() {
 }
 
 
-function createMobSelector() {
-	var tgtBox = document.getElementById("boxMobType");
+function createMobSelector(container) {
 	var mobBoxHtml = '';
 
 
-	tgtBox.innerHTML = "<b>Select the mob type:</b><br/>";
+	container.innerHTML = "<b>Select the mob type:</b><br/>";
 
 	for (var i=0; i<mobList.length; i++) {
-		mobBoxHtml = "<div class='boxPortrait'>";
-		mobBoxHtml += "<img src='assets/images/" + mobList[i].Picture + "' alt='" + mobList[i].Tooltip + "' title='" + mobList[i].Tooltip + "' onclick='setMainMob(" + i + ")' />";
+		mobBoxHtml = "<div class='boxMob' id='mob" + i + "'>";
+
+		mobBoxHtml += "<div class='boxPortrait' onclick='setMainMob(" + i + ")' ondblclick='setMainMob(" + i + ", true)'>";
+		mobBoxHtml += "<img src='assets/images/" + mobList[i].Picture + "' alt='" + mobList[i].Tooltip + "' title='" + mobList[i].Tooltip + "' />";
+		mobBoxHtml += "<div class='mobName'>" + mobList[i].Tooltip + "</div>"
 		mobBoxHtml += "</div>";
-		tgtBox.innerHTML += mobBoxHtml;
+
+		mobBoxHtml += "<div class='boxCommand'>";
+		mobBoxHtml += "<span class='cmdSelect' onclick='setMainMob(" + i + ")'>Select</span>";
+		mobBoxHtml += "<span class='cmdEdit' onclick='setMainMob(" + i + ", true)'>Edit</span>";
+		mobBoxHtml += "</div>";
+
+		mobBoxHtml += "</div>";
+		container.innerHTML += mobBoxHtml;
 	}
 
-	mobBoxHtml = "<div class='boxPortrait'>";
-	mobBoxHtml += "*** CREATE NEW MOB (ToDo) ***";
-	mobBoxHtml += "</div>";
-	tgtBox.innerHTML += mobBoxHtml;
-
+	// OBS 1 (?): Create groups: vanilla (basic) mobs | Presets (?) | My mobs (saved locally)
 }
 
+
+
+
+function createMobCustomizer(container) {
+	var mobBoxHtml = '';
+
+	//--- validation ---
+	if (mcCommand.MainMob === undefined) { showErrorMessage("No mob selected"); return; }
+
+
+	mobBoxHtml = "<b>Customize your mob:</b><br/>";
+
+	//--- mob picture ---
+	mobBoxHtml += "<div class='boxMob'>";
+
+	mobBoxHtml += "<div class='boxPortrait'>";
+	mobBoxHtml += "<img src='assets/images/" + mcCommand.MainMob.Picture + "' alt='" + mcCommand.MainMob.Tooltip + "' title='" + mcCommand.MainMob.Tooltip + "' />";
+	mobBoxHtml += "</div>";
+
+	mobBoxHtml += "</div>";
+
+
+	//--- mob properties and modifiers ---
+	mobBoxHtml += "Preset name: <input type='text' value='Custom " +  mcCommand.MainMob.Tooltip + "' /> <br/>"
+
+	mobBoxHtml += "<br/><br/> <b>GLOBAL PROPERTIES</b><br/>"
+	mobBoxHtml += "Health: <input type='text' value='" + mcCommand.MainMob.DefaultHealth + "' /> <br/>"
+	mobBoxHtml += "Custom name: <input type='text' /> <br/>"
+	mobBoxHtml += "Custom name visible: YES / NO <br/>"
+	mobBoxHtml += "Can pick up loot: YES / NO <br/>"
+	mobBoxHtml += "Persistent (will not despawn): YES / NO <br/>"
+
+	mobBoxHtml += "<br/><br/> <b>UNIQUE PROPERTIES</b><br/>"
+	switch(mcCommand.MainMob.EntityId) {
+		case 'Creeper':
+			mobBoxHtml += "Charged: YES / NO <br/>"
+			mobBoxHtml += "Explosion radius: <input type='text' value='3' /> <br/>"
+			mobBoxHtml += "Fuse: <input type='text' value='30' /> ticks <br/>"
+			break;
+
+		case 'Enderman':
+			mobBoxHtml += "Carried block: <input type='text' /> <br/>"
+			break;
+
+		case 'Guast':
+			mobBoxHtml += "Explosion power: <input type='text' value='1' /> <br/>"
+			break;
+
+		case 'PigZombie':
+			mobBoxHtml += "Angry: YES / NO <br/>"
+			break;
+
+		case 'Skeleton':
+			mobBoxHtml += "Type: Regular / Wither / undefined<br/>"
+			break;
+
+		case 'Villager':
+			mobBoxHtml += "Profession: <input type='text' value='1' /> <br/>"
+			break;
+
+		case 'VillagerGolem':
+			mobBoxHtml += "Player created (don't attack players): YES / NO <br/>"
+			break;
+
+		case 'Wolf':
+			mobBoxHtml += "Angry: YES / NO <br/>"
+			break;
+
+		case 'Zombie':
+			mobBoxHtml += "Villager: YES / NO <br/>"
+			mobBoxHtml += "Baby: YES / NO <br/>"
+			mobBoxHtml += "Can break doors: YES / NO <br/>"
+			break;
+
+	}
+
+
+	mobBoxHtml += "<br/><br/> <b>ATTRIBUTES</b><br/>"
+
+	mobBoxHtml += "<br/><br/> <b>EQUIPMENT</b><br/>"
+
+	mobBoxHtml += "<br/><br/> <b>POTION EFFECTS</b><br/>"
+
+
+	mobBoxHtml += "<br/><br/> TODO: save as / reset to default (confirm) / Cancel (confirm)"
+
+	container.innerHTML = mobBoxHtml;
+}
 
 
 
@@ -182,28 +313,22 @@ function setCommandType(type) {
 	switch(type) {
 		case 'spawner':
 			radType[0].checked = true;
-			document.getElementById("boxMobType").style.display = 'block';
-			document.getElementById("boxSpawnerCustomizer").style.display = 'block';
-			createMobSelector();
+			showPropertiesBox('spawnerBasic');
 			break;
 
 		case 'summon':
 			radType[1].checked = true;
-			document.getElementById("boxMobType").style.display = 'block';
-			document.getElementById("boxSpawnerCustomizer").style.display = 'none';
-			createMobSelector();
+			showPropertiesBox('summon');
 			break;
 
 		case 'item':
 			radType[2].checked = true;
-			document.getElementById("boxMobType").style.display = 'none';
-			document.getElementById("boxSpawnerCustomizer").style.display = 'none';
+			showPropertiesBox('item');		// ToDo
 			break;
 
 		case 'potion':
 			radType[3].checked = true;
-			document.getElementById("boxMobType").style.display = 'none';
-			document.getElementById("boxSpawnerCustomizer").style.display = 'none';
+			showPropertiesBox('potion');	// ToDo
 			break;
 
 		default:
@@ -211,8 +336,62 @@ function setCommandType(type) {
 	}
 }
 
-function setMainMob(index) {
+
+
+
+function showPropertiesBox(boxType) {
+	var bMobType 		= document.getElementById("boxMobType");
+	var bSpawnerProps 	= document.getElementById("boxSpawnerCustomizer");
+	var bMobProps 		= document.getElementById("boxMobCustomizer");
+
+
+	bMobType.style.display 			= 'none';
+	bSpawnerProps.style.display 	= 'none';
+	bMobProps.style.display 		= 'none';
+
+
+	switch(boxType) {
+		case 'spawnerBasic':
+			bMobType.style.display = 'block';
+			bSpawnerProps.style.display = 'block';
+			createMobSelector(bMobType);
+			break;
+
+		case 'spawnerCustom':
+			bMobProps.style.display = 'block';
+			bSpawnerProps.style.display = 'block';
+			createMobCustomizer(bMobProps);
+			break;
+
+		case 'summon':
+			bMobType.style.display = 'block';
+			createMobSelector(bMobType);
+			break;
+
+	}
+}
+
+
+
+
+
+function setMainMob(index, customize) {
+	// OBS: If in the future 'boxSelected' gets reused, change this to a loop on mobList
+
+	//-- remove the 'selected' class from everyone --
+	var currentSelectedList = document.getElementsByClassName('boxSelected');
+	for (var j=0; j<currentSelectedList.length; j++) {
+		currentSelectedList[j].className = currentSelectedList[j].className.replace('boxSelected', '');
+	}
+
+	//-- add the 'selected' class to the actual selection --
+	document.getElementById("mob" + index).className += ' boxSelected';
+
+	//-- Save what mob was selected --
 	mcCommand.MainMob = mobList[index];
+
+	//-- Show the customization/edit box if needed --
+	if (customize === true) showPropertiesBox('spawnerCustom');
 }
 
 
@@ -223,7 +402,7 @@ function generateCommand() {
 	// Type of command
 	switch(mcCommand.Type) {
 		case 'spawner':
-			//--- parameter validation
+			//--- validation
 			if (mcCommand.MainMob === undefined) { showErrorMessage("No mob selected"); break; }
 
 			//--- local variables
