Small fix of the 'summon' command

--- a/index.html
+++ b/index.html
@@ -459,9 +459,10 @@ function generateCommand() {
 
 		case 'summon':
 			cmd = '/summon ';
-			cmd += 'EntityId:' + mcCommand.MainMob.EntityId;
-			cmd += ' ~ ~ ~ {';
-			cmd += '}';
+			cmd += mcCommand.MainMob.EntityId;
+			cmd += ' ~ ~ ~ ';
+			// cmd += '{';
+			// cmd += '}';
 			break;
 
 
